--- a/.gitignore
+++ b/.gitignore
@@ -130,3 +130,13 @@ dmypy.json
 
 # Credentials
 client_secret.json
+sheets.googleapis.com-python.json
+
+#vscode
+.vscode/*
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
